--- a/src/pages/Login/LoginStyles.scss
+++ b/src/pages/Login/LoginStyles.scss
@@ -1,6 +1,6 @@
 .auth{
-  background: linear-gradient(to bottom, #0484f0, $primary-color);
-  // height: 100%;
+  // background: linear-gradient(to bottom, #0484f0, $primary-color);
+  height: 100%;
   padding-top: 50px;
   .logo{
     text-align: center;
